Migrate to a more modern version of proton and remove dependency on the `com.google.testing.compile:compile-testing` artifact